price alignment fix

--- a/src/scss/sections/_solutions.scss
+++ b/src/scss/sections/_solutions.scss
@@ -68,12 +68,12 @@
     &_card-title {
         font-weight: 500;
         font-size: 24px;
-        line-height: 125%;
+        line-height: 0;
         color: #fff;
+        margin-bottom: 20px;
         @include desktop {
             font-size: 38px;
-            height: 47px;
-            margin-top: 12px;
+            margin-bottom: 27px;
         }
     }
     &_card-vat {
@@ -102,7 +102,6 @@
         @include desktop {
             text-shadow: 0px 4px 0px #594C73, 0px 8px 0px #746494, 0px 12px 0px #9A89B9;
             font-size: 48px;
-            height: 67px;
         }
 
         .solutions_card__red & {
@@ -173,7 +172,7 @@
     &_card-top {
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-end;
         padding: 10px $indent;
         flex-grow: 0;
         @include desktop {
